--- a/src/app/components/keypad/keypad.component.html
+++ b/src/app/components/keypad/keypad.component.html
@@ -2,88 +2,88 @@
   <div class="example-button-row">
     <div class="example-flex-container">
       <div class="example-button-container">
-        <button mat-fab color="primary" aria-label="Example icon button with a delete icon">
+        <button mat-fab color="primary" aria-label="Clear Button" (click)="onOperator(1)">
           C
         </button>
       </div>
       <div class="example-button-container">
-        <button mat-fab color="primary" aria-label="Example icon button with a delete icon">
+        <button mat-fab color="primary" aria-label="Plus/ Minus Button">
           +/-
         </button>
       </div>
       <div class="example-button-container">
-        <button mat-fab color="primary" aria-label="Example icon button with a delete icon">
+        <button mat-fab color="primary" aria-label="Percent Button">
           %
         </button>
       </div>
       <div class="example-button-container">
-        <button mat-fab color="warn" aria-label="Example icon button with a delete icon">
+        <button mat-fab color="warn" aria-label="Divison Button">
          /
         </button>
       </div>
     </div>
     <div class="example-flex-container">
         <div class="example-button-container">
-          <button mat-fab color="primary" aria-label="Example icon button with a delete icon" (click)="onPress('7')">
+          <button mat-fab color="primary" aria-label="7 Button" (click)="onPress('7')">
             7
           </button>
         </div>
         <div class="example-button-container">
-          <button mat-fab color="primary" aria-label="Example icon button with a delete icon" (click)="onPress('8')">
+          <button mat-fab color="primary" aria-label="8 Button" (click)="onPress('8')">
             8
           </button>
         </div>
         <div class="example-button-container">
-          <button mat-fab color="primary" aria-label="Example icon button with a delete icon">
+          <button mat-fab color="primary" aria-label="9 Button" (click)="onPress('9')">
             9
           </button>
         </div>
         <div class="example-button-container">
-          <button mat-fab color="warn" aria-label="Example icon button with a delete icon">
+          <button mat-fab color="warn" aria-label="Multiplication Button">
            X
           </button>
         </div>
       </div>
       <div class="example-flex-container">
         <div class="example-button-container">
-          <button mat-fab color="primary" aria-label="Example icon button with a delete icon">
+          <button mat-fab color="primary" aria-label="4 Button" (click)="onPress('4')">
             4
           </button>
         </div>
         <div class="example-button-container">
-          <button mat-fab color="primary" aria-label="Example icon button with a delete icon">
+          <button mat-fab color="primary" aria-label="5 Button" (click)="onPress('5')">
             5
           </button>
         </div>
         <div class="example-button-container">
-          <button mat-fab color="primary" aria-label="Example icon button with a delete icon">
+          <button mat-fab color="primary" aria-label="6 Button" (click)="onPress('6')">
             6
           </button>
         </div>
         <div class="example-button-container">
-          <button mat-fab color="warn" aria-label="Example icon button with a delete icon">
+          <button mat-fab color="warn" aria-label="Subtraction Button">
            -
           </button>
         </div>
       </div>
       <div class="example-flex-container">
         <div class="example-button-container">
-          <button mat-fab color="primary" aria-label="Example icon button with a delete icon">
+          <button mat-fab color="primary" aria-label="0 Button" (click)="onPress('0')">
             0
           </button>
         </div>
         <div class="example-button-container">
-          <button mat-fab color="primary" aria-label="Example icon button with a delete icon">
+          <button mat-fab color="primary" aria-label="Double 0 Button" (click)="onPress('00')">
             00
           </button>
         </div>
         <div class="example-button-container">
-          <button mat-fab color="primary" aria-label="Example icon button with a delete icon">
+          <button mat-fab color="primary" aria-label="Decimal Button" (click)="onPress('.')">
             .
           </button>
         </div>
         <div class="example-button-container">
-          <button mat-fab color="warn" aria-label="Example icon button with a delete icon">
+          <button mat-fab color="warn" aria-label="Equal Button">
            =
           </button>
         </div>
